syntax = "proto3";

package pb;

option go_package = "economic-school/pb";

import "google/protobuf/field_mask.proto";

message Exam {
  int32 exam_id = 1;
  string university = 2;
  string subject = 3;
  int32 year = 4;
  int32 question_num = 5;
  string question_pdf_url = 6;
  string answer_pdf_url = 7;
  string video_url = 8;
}

message CreateExamRequest {
  string university = 1;
  string subject = 2;
  int32 year = 3;
  int32 question_num = 4;
  string question_pdf_url = 5;
  string answer_pdf_url = 6;
  string video_url = 7;
}

message GetExamRequest {
  int32 exam_id = 1;
}

message ListExamsRequest {
}

message ListExamsResponse {
  repeated Exam exams = 1;
}

message UpdateExamRequest {
  Exam exam = 1;
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteExamRequest {
  int32 exam_id = 1;
}